commit final: cronometro, obtener datos de api y contador funcionando